--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,13 @@
     "description": "",
     "type": "magento2-module",
     "license": "OSL-3.0",
+    "version": "1.0.0",
     "authors": [
         {
             "email": "info@mage2gen.com",
             "name": "Mage2Gen"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {},
     "autoload": {
         "files": [
             "registration.php"
